
2010/08/17 - Version 1.6 - bugfix in hl script.
                "Attempt to free unreferenced scalar value" message at exit is
                now fixed.

2010/09/17 - Version 1.7 - in hl added possibility to store highlight snippets
                in file .hlrc in HOME directory.

2011/09/09 - Version 1.7.1 - hl will not put color escape sequences if output
                directed not to STDOUT: this will make it possible to use hl
                safely in pipes.

2015/10/25 - Version 1.8 - fixing multiple errors in hl, including:
                option '-' did not work when global option '-b' was set,
                added global option '-u' to match Unicode characters,
                added global option '--' to explicitly separate global and
                    highlight options.
                Highlight.pm version 1.3 - resetting of bold typeface and
                    background colors could not work.

2016/05/31 - Version 1.8.4 - various fixes related mostly to multiple files
                processing.

2016/06/01 - Version 1.8.5 - much faster start time when recursive grep is not
                needed.

2016/06/05 - Version 1.8.6 - minor bug fixes and docs updates.

2016/06/26 - Version 1.8.7 - added option '-n' to print line numbers,
                file names and line numbers can now be colorized by setting of
                    an environment variable HL_LOCATION.
                Highlight.pm version 1.5 - ignore zero-length matches.

2016/06/27 - Version 1.8.8 - added option '-c' to print context lines around
                matches.

2016/06/28 - Version 1.8.9 - fixes in context lines processing

2016/07/14 - Version 1.9.0 - allow natural Unicode symbols in input patterns
                when option '-u' is set. Support for granular snippet files to
                help hl start faster.

2016/07/21 - Version 1.9.1 - significant speed optimization in the grep mode.
                Highlight.pm version 1.6 - added a new interface function.
