@@ -1,4 +1,4 @@
-Highlight version 1.9.1
+Highlight version 1.9.2
 =======================
 
 INSTALLATION
