@@ -68,3 +68,6 @@ Revision history for Perl module Term::Highlight and script hl.
 2016/07/21 - Version 1.9.1 - significant speed optimization in the grep mode.
                 Highlight.pm version 1.6 - added a new interface function.
 
+2016/07/21 - Version 1.9.2 - version bump after Highlight.pm update.
+                Highlight.pm version 1.7 - fixes in default color mode.
+
